<resources>
    <string name="app_name">Code Challenge Intent salsabila</string>
    <string name="button_main">Text One</string>
    <string name="activity2_name">Text One</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London - protected by an unmarked, triple-locked, police-alarmed door - are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
    \n\n
    This volume starts with the first new Beatle song, "Free as a Bird" (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
    \n\n
    <b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
    \n\n
    <b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
    \n\n
    <b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
    \n\n
    <b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
    \n\n
    <b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
    \n\n
    <b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
    \n\n
    <b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.</string>

    <string name="button_two">Text Two</string>
    <string name="activity3_name">Text Two</string>
    <string name="text_artikel">
        Oleh karena pertengkaran dengan sang ibu, Sangkuriang memutuskan meninggalkan rumah untuk mengembara. Dayang Sumbing, ibu Sangkuriang,menyesal dan berdoa agar kelak bisa tetap cantik,awet muda, dan bertemu kembali dengan anaknya.
    \n\n
        Setelah sekian lama, Sangkuriang akhirnya kembali ke kampung halamannya. Desa tersebut sudah mengalami banyak perubahan. Ketika dalam perjalanan menemui ibunya, pemuda itu bertemu dengan seorang wanita yang sebenarnya adalah ibunya dan ia jatuh cinta. Lalu melamar dan mengajak wanita tersebut menikah.
    \n\n
        Suatu kali Sangkuriang meminta Dayang Sumbing mengeratkan ikatan di kepalanya. Saat itulah ibunya melihat bekas luka yang persis seperti yang dimiliki Sangkuriang kecil. Dayang Sumbing pun sadar bahwa pemuda itu adalah putranya dan berusaha menggagalkan pernikahann mereka.
     \n\n
        Ketika ia menceritakan bahwa dirinya adalah ibunya, Sangkuriang tidak percaya. Hingga kemudian ibunya meminta dua syarat untuk Sangkuriang bisa menikahinya, yakni membendung sungai Citarum dan membuat sampan sebelum tiba fajar.
     \n\n
        Sangkuriang menuruti ibunya dan hampir berhasil menyelesaikan tantangan tersebut dengan bantuan teman-teman jinnya. Dayang Sumbing terkejut dan mencari cara untuk menggagalkannya. Ia meminta warga menggelar kain sutera berwarna merah di sebelah timur kota, sehingga langit seolah-olah mendekati fajar.
      \n\n
        Melihat fajar datang, Sangkuriang merasa dirinya gagal. Ia kesal dan menjebol bendungan yang sebelumnya sudah rampung dibuatnya hingga datanglah banjir yang menenggelamkan desa tersebut. Ia juga menendang sampan yang dibuatnya hingga jatuh tertelungkup dan berubah menjadi gunung yang saat ini disebut Gunung Tangukuban Perahu.
      \n\n
        sumber : https://.id.theasianparent.com
    </string>
    <string name="subtitle_artikel"><b>Cerita Rakyat Sangkuriang,Jawa Barat</b></string>
    <string name="judul_artikel">Sangkuriang</string>

    <string name="button_three">Text Three</string>
    <string name="activity4_name">Text Three</string>
    <string name="judul_article">Roro Jonggrang</string>
    <string name="subtitle_article"><b>Cerita Rakyat Roro Jonggrang</b></string>
    <string name="text_article">
        Cerita rakyat Roro Jonggrang berkisah tentang dua kerajaan kuno di Jawa yang saling bertetangga, Pengging dan Boko. Pengging diperintah oleh seorang raja bernama Prabu Damar Moyo yang bijaksana. Ia memiliki seorang anak bernama Bandung Bondowoso. Sebaliknya, Boko dipimpin oleh raksasa pemakan manusia bernama Prabu Boko dan seorang patih bernama Patih Gupolo. Meskipun ia adalah raksasa jahat, Prabu Boko memiliki seorang putri cantik jelita bernama Roro Jonggrang.
     \n\n
        Suatu ketika, prabu Boko ingin memperluas kerajaannya dengan menyerang Pengging. Namun, upaya tersebut dapat digagalkan. Prabu Damar Moyo lalu mengirim sang putra Bandung Bondowoso untuk menyerang Boko.
     \n\n
        Singkat cerita, Bandung Bondowoso berhasil mengalahkan pasukan Boko dan membunuh Prabu Boko. Ia lalu jatuh cinta pada kecantikan Roro Jonggrang dan ingin mempersuntingnya. Namun, Roro Jonggrang yang sedih atas kematian ayahnya tak ingin dinikahi. Ia membuat syarat kepada Bandung Bondowoso untuk membuat sebuah sumur yang disebut Jalatunda.
     \n\n
        Dengan mudah, Bandung Bondowoso yang memiliki kesaktian dapat memenuhi permintaan tersebut. Setelah sumur jadi, Roro Jonggrang mendorong Bandung masuk dalam sumur, lalu meminta patih ayahnya, Gupolo, menimbun sumur dengan batu. Namun, Kesaktian Bandung Bondowoso menyelamatkan nyawanya. Rasa cinta yang besar membuat Bandung Bondowoso mengampuni Roro Jonggrang.
     \n\n
        Roro Jonggrang lalu meminta Bandung Bondowoso membangun seribu candi dalam satu malam. Dengan bantuan jin, Bandung Bondowoso berhasil membangun 999 candi. Demi menggagalkan usaha Bandung Bondowoso, Roro Jonggrang dan pembantunya, menumbuk padi di malam hari untuk menipu para jin yang sedang membangun candi terakhir. Para jin terkejut mendengar suara orang menumbuk padi dan ayam berkokok. Mereka mengira hari sudah pagi dan bergegas pergi, meninggalkan candi terakhir tak terselesaikan.
     \n\n
        Singkat cerita, Bandung Bondowoso tak mengampuni Roro Jonggrang dan mengutuknya menjadi patung hiasan di candi terakhir itu.
     \n\n
        sumber : https://id.theasianparent.com


    </string>

</resources>